refactor : modify project name

--- a/gitfarm_algorithm/src/main/cpp/CMakeLists.txt
+++ b/gitfarm_algorithm/src/main/cpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.31.0)
-project(gitcha_algorithms VERSION 0.1.0 LANGUAGES C CXX)
+project(gitfarm_algorithm VERSION 0.1.0 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
