feat : branch initial commit

--- a/gitfarm_middleware/src/main/c/CMakeLists.txt
+++ b/gitfarm_middleware/src/main/c/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.31.0)
-project(gitfarm_git_api VERSION 0.1.0 LANGUAGES C)
+project(gitfarm_middleware VERSION 0.1.0 LANGUAGES C)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD 17)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c17")
 
 if(APPLE)
     # macOS
@@ -58,7 +58,7 @@ set(SOURCES
 )
 
 set(LIB_NAME
-    gitfarm_git_api
+    gitfarm_middleware
 )
 
 add_library(${LIB_NAME} SHARED
