--- a/gitfarm_algorithm/CMakeLists.txt
+++ b/gitfarm_algorithm/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SOURCES
     src/algorithm/algorithm.cpp
     src/jni/random.cpp
     src/domain/item.cpp
+    src/domain/user.cpp
     src/jni/jni.c
 )
 
@@ -81,13 +82,3 @@ elseif(UNIX)
         SUFFIX ".so"
     )
 endif()
-
-add_executable(test_runner
-    test/test.cpp
-)
-
-target_link_libraries(test_runner PRIVATE ${LIB_NAME})
-
-set_target_properties(test_runner PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-)
